updated env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT=8000
-DB_PATH=./.gitignored/app.db
-STATIC_DIR=./localhost
+DB_PATH=./path/to/your/database.db
+STATIC_DIR=./path/to/your/webserver/public
+S_UUID=your-secret-uuid
