--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "name": "@apn/websersocketgui",
-  "version": "0.1.2",
-  "license": "MIT",
+  "version": "0.1.3",
+  "license": "GPLv2",
   "exports": {
     ".": "./exports.js",
     "./init": "./init.js"
