--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "name": "@apn/websersocketgui",
   "version": "0.1.3",
-  "license": "GPLv2",
+  "license": "GPL",
   "exports": {
     ".": "./exports.js",
     "./init": "./init.js"
