--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ PORT=8000
 DB_PATH=./.gitignored/app.db
 STATIC_DIR=./localhost
 S_UUID=c2b7af3b-f109-4c7f-ad9d-ea55a7abd35b
+MODEL_CONSTRUCTORS_CLI_LANGUAGES_PATH=./.gitignored/model_constructors/
