--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,10 @@
 {
   "name": "@apn/websersocketgui",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "license": "GPL-2.0-only",
   "exports": {
     ".": "./exports.js",
-    "./init": "./init.js"
+    "./init": "./serverside/init.js"
   },
   "publish": {
     "exclude": [
@@ -16,8 +16,8 @@
     "run": "B_DENO_TASK=1 deno run --allow-net --allow-read --allow-write --allow-env --allow-ffi --allow-run --env websersocket_c2b7af3b-f109-4c7f-ad9d-ea55a7abd35b.js",
     "stop": "pkill -f 'deno run.*websersocket_c2b7af3b-f109-4c7f-ad9d-ea55a7abd35b.js' || echo 'No running websersocket process found.'",
     "restart": "deno task stop && deno task run",
-    "test": "deno test --allow-net --allow-read --allow-write --allow-env --allow-ffi function_testings.js",
-    "uninit": "deno run --allow-read --allow-write --allow-env --env uninit.js"
+    "test": "deno test --allow-net --allow-read --allow-write --allow-env --allow-ffi serverside/function_testings.js",
+    "uninit": "deno run --allow-read --allow-write --allow-env --env serverside/uninit.js"
   },
   "imports": {
     "@std/fs": "jsr:@std/fs@^1.0.23"
